<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateActivity">

    <include
        layout="@layout/actionbar_toolbar"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbarStyle="outsideOverlay"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:id="@+id/lnlRegistrate"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtMarcaWp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/txtMarca"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:inputType="text"
                    android:hint="@string/marca" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtModeloWp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/txtModelo"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:inputType="text"
                    android:hint="@string/modelo" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtColorWp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/txtColor"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:inputType="text"
                    android:hint="@string/color" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:text="@string/Ram"
                android:textSize="14dp"/>
            <Spinner
                android:id="@+id/spnRam"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:text="@string/procesador"
                android:textSize="14dp"/>
            <Spinner
                android:id="@+id/spnProcesador"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:text="@string/DiscoDuro"
                android:textSize="14dp"/>
            <Spinner
                android:id="@+id/spnDiscoDuro"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:text="@string/SistemaOperativo"
                android:textSize="14dp"/>
            <Spinner
                android:id="@+id/spnSistemaOp"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:text="@string/Tipo"
                android:textSize="14dp"/>
            <Spinner
                android:id="@+id/spnTipo"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"/>

            <Button
                android:id="@+id/btnRegistrar"
                android:theme="@style/RaisedButtonDark"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/btnGuardar"
                android:enabled="true"
                android:shadowRadius="10"
                android:textSize="16dp"
                android:textAllCaps="false"/>

        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>